# DSA-HW

./: README.md  test.txt
Algorithms/: main
Algorithms/HW/sorting/: CMakeLists.txt  sorting.h  (+2 more)
Algorithms/Sorting/: a.out  main.cpp
Algorithms/binary_search/: CMakeLists.txt  main.cpp
Algorithms/sorting/: a.out
DS/AVL/: AVLTree.cpp  CMakeLists.txt  a.out  main  main.cpp
DS/BST/: CMakeLists.txt  main.cpp  tree_create.h
DS/Binary_Tree/: CMakeLists.txt  a.out  main  main.cpp  tree_create.h
DS/Trie/: CMakeLists.txt  Trie.cpp  TrieWithrecursion.cpp  a.out  trie.cpp  trie.h
DS/stack/: CMakeLists.txt
Linked_List/singleLinkedList_cpp/: a.out  singleLinkedList.cpp
Single_Linked_List/: CMakeLists.txt
Single_Linked_List/HW/singleLinkedList_Med_HW/Med in Java/src/: Main.java  Node.java
Single_Linked_List/HW/singleLinkedList_Med_HW/Med in cpp/: SLL_Med.cpp
Single_Linked_List/implementation/singleLinkedList_java/single linked list/src/: SingleLinkedList.java
Single_Linked_List/singleLinkedList_Easy_HW/: SLL_Easy.cpp  a.out
Single_Linked_List/singleLinkedList_Med_HW/Med in Java/src/: MedChallenges.java
Single_Linked_List/singleLinkedList_Med_HW/Med in cpp/: SLL_Med.cpp  singleLinkedList.h
Single_Linked_List/singleLinkedList_cpp/: a.out  singleLinkedList.cpp
Single_Linked_List/singleLinkedList_java/single linked list/src/: TestSingleLinkedList.java
double linked list/doubleLinkedList_cpp/: doubleLinkedList.cpp
stack/implementation in cpp/: stack_arrayBased.cpp  stack_singleLinkedListBased.cpp
vector/vector in cpp/: a.out  vector.cpp
(+36 files in other folders)
